# Qui1Framework

./: CMakeLists.txt  README.md
include/common/: device_info_print.cuh  error_check.cuh
include/matrix/: common_matrix.cuh  device_matrix.cuh  device_matrix_view.cuh  host_matrix.cuh  host_matrix_view.cuh  matrix_view.cuh  qui1_device_matrix.cuh  qui1_host_matrix.cuh  qui1_matrix.cuh  qui1_matrix_base.cuh  qui1_matrix_helper.cuh
include/matrix/view/: qui1_device_matrix_view.cuh  qui1_host_matrix_view.cuh  qui1_matrix_view_base.cuh
include/wrapper/blas/: qui1_cublas_wrapper.cuh  qui1_gemm_wrapper.cuh
include/wrapper/solver/: qui1_cusolver_wrapper.cuh
tests/: test_cusolver_getrf.cu  test_device_info_print.cpp  test_fmt.cpp  test_gemm_wrapper.cpp  test_matrix_helper_extract_triangle.cu  test_matrix_helper_fill_random.cpp  test_matrix_helper_print.cpp  test_nrm_wrapper.cpp  test_trsm_wrapper.cpp
